@@ -1,0 +1,10 @@
+# this file is part of refractiveindex.info database
+# refractiveindex.info database is in the public domain
+# copyright and related rights waived via CC0 1.0
+
+REFERENCES: "<a href=\"http://refractiveindex.info/download/data/2015/PI_EpoCore_Clad_2015.pdf\">Micro resist EpoCore and EpoClad datasheet</a>, 2001"
+COMMENTS: "Micro resist EpoClad negative photoresist for waveguide manufacturing"
+DATA:
+  - type: formula 5
+    range: 0.45 1.55
+    coefficients: 1.560 0.0073 -2 0.00038 -4
